feat: add header to  html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
     <link rel="stylesheet" href="./assets/reset.css" />
     <link rel="stylesheet" href="./assets/font.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Title</title>
+    <title>Productly: The Design Thinking superpowers</title>
   </head>
   <body>
+    <div class="header">
+      <div class="wrapper">
+        <a href="#" class="logo"></a>
+        <nav class="header__navigation">
+          <ul class="navigation">
+            <li>Home</li>
+            <li>Services</li>
+            <li>About</li>
+            <li>Product</li>
+          </ul>
+        </nav>
+        <div class="header__buttons">
+          <button class="button button_bordered">Sing In</button>
+          <button class="button button_colored">Sing In</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
