--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Productly: The Design Thinking superpowers</title>
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <div class="wrapper">
         <a href="#" class="logo"></a>
         <nav class="header__navigation">
@@ -21,10 +21,23 @@
           </ul>
         </nav>
         <div class="header__buttons">
-          <button class="button button_bordered">Sing In</button>
-          <button class="button button_colored">Sing In</button>
+          <button class="button button--bordered">Sing In</button>
+          <button class="button button--colored">Sing In</button>
         </div>
       </div>
-    </div>
+    </header>
+
+    <section class="promo">
+      <div class="wrapper">
+        <div class="promo__content">
+          <h1>The Design Thinking superpowers</h1>
+          <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+          <div class="promo__buttons">
+            <button class="button button--colored">Get started</button>
+            <a href="#" class="link-button"><span class="ico ico--button"></span>Watch the Video</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
