--- a/index.html
+++ b/index.html
@@ -39,5 +39,52 @@
         </div>
       </div>
     </section>
+
+    <section class="tools">
+      <div class="wrapper">
+        <h2>We design tools to unveil your superpowers</h2>
+        <div class="layout-4-column tool-container">
+          <div class="tool">
+            <div class="tool__icon">
+              <span class="icon-square icon-square--violet">
+                <span class="ico ico--arrow"></span>
+              </span>
+            </div>
+            <h4 class="tool__title">First click tests</h4>
+            <p class="tool__text">While most people enjoy casino gambling</p>
+          </div>
+          <div class="tool">
+            <div class="tool__icon">
+              <span class="icon-square icon-square--yellow">
+                <span class="ico ico--snake"></span>
+              </span>
+            </div>
+            <h4 class="tool__title">Design surveys</h4>
+            <p class="tool__text">Sports betting, lottery and bingo playing for the fun</p>
+          </div>
+          <div class="tool">
+            <div class="tool__icon">
+              <span class="icon-square icon-square--red">
+                <span class="ico ico--heart"></span>
+              </span>
+            </div>
+            <h4 class="tool__title">Preference tests</h4>
+            <p class="tool__text">The Myspace page defines the individual.</p>
+          </div>
+          <div class="tool">
+            <div class="tool__icon">
+              <span class="icon-square icon-square--blue">
+                <span class="ico ico--clock"></span>
+              </span>
+            </div>
+            <h4 class="tool__title">Five second tests</h4>
+            <p class="tool__text">Personal choices and the overall personality of the person.</p>
+          </div>
+        </div>
+        <div class="tools-button">
+          <button class="button button--colored">Sing Up Now</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
