--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
         <h2 class="strategies__title">Marketing strategies</h2>
         <p class="strategies__description">Join 40,000+ other marketers and get proven strategies on email marketing</p>
         <div class="strategies__tags tags">
-          <span class="tag tag_selected">All</span>
-          <span class="tag tag_bordered">Art</span>
-          <span class="tag tag_bordered">Culture</span>
-          <span class="tag tag_bordered">Design</span>
+          <span class="tag tag--selected">All</span>
+          <span class="tag tag--bordered">Art</span>
+          <span class="tag tag--bordered">Culture</span>
+          <span class="tag tag--bordered">Design</span>
         </div>
         <div class="layout-3-column strategy-wrapper">
           <article class="strategy block-shadowed">
@@ -103,8 +103,8 @@
             <div class="strategy__content">
               <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
               <div class="strategy__tags tags">
-                <span class="tag tag_colored">Art</span>
-                <span class="tag tag_colored">Design</span>
+                <span class="tag tag--colored">Art</span>
+                <span class="tag tag--colored">Design</span>
               </div>
             </div>
           </article>
@@ -113,7 +113,7 @@
             <div class="strategy__content">
               <h3 class="strategy__name">Motivation Is The First Step To Success</h3>
               <div class="strategy__tags tags">
-                <span class="tag tag_colored">Culture</span>
+                <span class="tag tag--colored">Culture</span>
               </div>
             </div>
           </article>
@@ -122,9 +122,9 @@
             <div class="strategy__content">
               <h3 class="strategy__name">Success Steps For Your Personal Or Business Life</h3>
               <div class="strategy__tags tags">
-                <span class="tag tag_colored">Culture</span>
-                <span class="tag tag_colored">Design</span>
-                <span class="tag tag_colored">Art</span>
+                <span class="tag tag--colored">Culture</span>
+                <span class="tag tag--colored">Design</span>
+                <span class="tag tag--colored">Art</span>
               </div>
             </div>
           </article>
@@ -133,9 +133,9 @@
             <div class="strategy__content">
               <h3 class="strategy__name">Success Steps For Your Personal Or Business Life Plus Funny Image on the Back</h3>
               <div class="strategy__tags tags">
-                <span class="tag tag_colored">Culture</span>
-                <span class="tag tag_colored">Design</span>
-                <span class="tag tag_colored">Art</span>
+                <span class="tag tag--colored">Culture</span>
+                <span class="tag tag--colored">Design</span>
+                <span class="tag tag--colored">Art</span>
               </div>
             </div>
           </article>
@@ -144,7 +144,7 @@
             <div class="strategy__content">
               <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
               <div class="strategy__tags tags">
-                <span class="tag tag_colored">Design</span>
+                <span class="tag tag--colored">Design</span>
               </div>
             </div>
           </article>
