--- a/index.html
+++ b/index.html
@@ -10,81 +10,92 @@
   </head>
   <body>
     <header class="header">
-      <div class="wrapper">
-        <a href="#" class="logo"></a>
-        <nav class="header__navigation">
-          <ul class="navigation">
-            <li>Home</li>
-            <li>Services</li>
-            <li>About</li>
-            <li>Product</li>
-          </ul>
-        </nav>
-        <div class="header__buttons">
-          <button class="button button--bordered">Sing In</button>
-          <button class="button button--colored">Sing In</button>
+        <div class="wrapper header__wrapper">
+            <div class="header__logo-line">
+                <span class="header__hamburger hamburger"><span class="hamburger__line"></span></span>
+                <a href="#" class="logo">
+                    <object type="image/svg+xml" data="./assets/img/logo.svg" class="logo-object">
+                        Your browser does not support SVG
+                     </object>
+                </a>
+            </div>
+            <nav class="header__navigation">
+                <ul class="navigation">
+                    <li class="navigation__link">Home</li>
+                    <li class="navigation__link">Services</li>
+                    <li class="navigation__link">About</li>
+                    <li class="navigation__link">Product</li>
+                </ul>
+            </nav>
+            <div class="header__buttons">
+                <button class="button button--bordered">Sign In</button>
+                <button class="button button--colored">Sign Up</button>
+            </div>
         </div>
-      </div>
     </header>
 
     <section class="promo">
-      <div class="wrapper">
-        <div class="promo__content">
-          <h1>The Design Thinking superpowers</h1>
-          <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
-          <div class="promo__buttons">
-            <button class="button button--colored">Get started</button>
-            <a href="#" class="link-button"><span class="ico ico--button"></span>Watch the Video</a>
-          </div>
+        <div class="wrapper promo__wrapper">
+            <div class="promo__content">
+                <h1 class="promo__title">The Design Thinking superpowers</h1>
+                <p class="promo__text">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+                <div class="promo__buttons">
+                    <button class="button button--colored">Get started</button>
+                    <a href="#" class="link-button">
+                        <span class="ico ico--play"></span>
+                        <span class="link-button__text">Watch the Video</span>
+                    </a>
+                </div>
+            </div>
+            <img src="./assets/img/promo/promo.png" class="promo__image" alt="The Design Thinking superpowers">
         </div>
-      </div>
     </section>
 
     <section class="tools">
-      <div class="wrapper">
-        <h2>We design tools to unveil your superpowers</h2>
-        <div class="layout-4-column tool-container">
-          <div class="tool">
-            <div class="tool__icon">
-              <span class="icon-square icon-square--violet">
-                <span class="ico ico--arrow"></span>
-              </span>
+        <div class="wrapper tools__wrapper">
+            <h2 class="tools__title">We design tools to unveil your superpowers</h2>
+            <div class="layout-4-column tool-container">
+                <div class="tool">
+                    <div class="tool__icon">
+                        <span class="icon-square icon-square--violet">
+                            <span class="ico ico--arrow"></span>
+                        </span>
+                    </div>
+                    <h4 class="tool__title">First click tests</h4>
+                    <p class="tool__text">While most people enjoy casino gambling</p>
+                </div>
+                <div class="tool">
+                    <div class="tool__icon">
+                        <span class="icon-square icon-square--yellow">
+                            <span class="ico ico--snake"></span>
+                        </span>
+                    </div>
+                    <h4 class="tool__title">Design surveys</h4>
+                    <p class="tool__text">Sports betting, lottery and bingo playing for the fun</p>
+                </div>
+                <div class="tool">
+                    <div class="tool__icon">
+                        <span class="icon-square icon-square--red">
+                            <span class="ico ico--heart"></span>
+                        </span>
+                    </div>
+                    <h4 class="tool__title">Preference tests</h4>
+                    <p class="tool__text">The Myspace page defines the individual.</p>
+                </div>
+                <div class="tool">
+                    <div class="tool__icon">
+                        <span class="icon-square icon-square--blue">
+                            <span class="ico ico--clock"></span>
+                        </span>
+                    </div>
+                    <h4 class="tool__title">Five second tests</h4>
+                    <p class="tool__text">Personal choices and the overall personality of the person.</p>
+                </div>
             </div>
-            <h4 class="tool__title">First click tests</h4>
-            <p class="tool__text">While most people enjoy casino gambling</p>
-          </div>
-          <div class="tool">
-            <div class="tool__icon">
-              <span class="icon-square icon-square--yellow">
-                <span class="ico ico--snake"></span>
-              </span>
+            <div class="tools__button">
+                <button class="button button--colored">Sign Up Now</button>
             </div>
-            <h4 class="tool__title">Design surveys</h4>
-            <p class="tool__text">Sports betting, lottery and bingo playing for the fun</p>
-          </div>
-          <div class="tool">
-            <div class="tool__icon">
-              <span class="icon-square icon-square--red">
-                <span class="ico ico--heart"></span>
-              </span>
-            </div>
-            <h4 class="tool__title">Preference tests</h4>
-            <p class="tool__text">The Myspace page defines the individual.</p>
-          </div>
-          <div class="tool">
-            <div class="tool__icon">
-              <span class="icon-square icon-square--blue">
-                <span class="ico ico--clock"></span>
-              </span>
-            </div>
-            <h4 class="tool__title">Five second tests</h4>
-            <p class="tool__text">Personal choices and the overall personality of the person.</p>
-          </div>
         </div>
-        <div class="tools-button">
-          <button class="button button--colored">Sing Up Now</button>
-        </div>
-      </div>
     </section>
 
     <section class="strategies">
@@ -188,5 +199,75 @@
         </div>
       </div>
     </section>
+
+ <section class="contact-us">
+        <div class="wrapper">
+            <h2 class="contact-us__title">Contact Us</h2>
+            <div class="layout-2-column contact-us-container">
+                <div class="contact-us__content">
+                    <p class="contact-us__text">Your About Us page is vital. It’s often the first stop in any user’s journey through a website or blog. It also shouldn’t be their last, because first impressions count online just as much as they do in the real world. If your visitors aren’t impressed, you can expect them to leave without reading your awesome content or completing a conversion action (e.g., signing up for your newsletter, making a purchase).</p>
+                    <p class="contact-us__link">
+                        <span class="icon-round icon-round--white"><span class="ico ico--phone"></span></span>
+                        <a href="tel:+375111111111">+375 (22) 345-00-99</a>
+                    </p>
+                    <p class="contact-us__link">
+                        <span class="icon-round icon-round--white"><span class="ico ico--letter"></span></span>
+                        </span> <a href="mailto:emailname@gmail.com">emailname@gmail.com</a>
+                    </p>
+                </div>
+                <div class="contact-us__form">
+                    <form action method="POST">
+                        <div class="layout-2-column contact-us__line">
+                            <input type="text" name="name" placeholder="Your name">
+                            <input type="email" name="email" placeholder="Your email">
+                        </div>
+                        <textarea name="question" placeholder="What do you want to ask?" class="contact-us__line"></textarea>
+                        <div class="contact-us__button">
+                            <button type="submit" class="button button_colored">Send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="wrapper footer__wrapper">
+            <a href="#" class="logo">
+                <object type="image/svg+xml" data="./assets/img/logo.svg" class="logo-object">
+                    Your browser does not support SVG
+                 </object>
+            </a>
+            <div class="footer-navigation layout-3-column">
+                <div class="footer-navigation__column">
+                    <h4 class="footer-navigation__title">Quick Links</h4>
+                    <ul class="footer-navigation__links">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="footer-navigation__column">
+                    <h4 class="footer-navigation__title">Legal Stuff</h4>
+                    <ul class="footer-navigation__links">
+                        <li><a href="#">Disclamer</a></li>
+                        <li><a href="#">Financing</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                    </ul>
+                </div>
+                <div class="footer-navigation__column">
+                    <h4 class="footer-navigation__title">Quick Links</h4>
+                    <ul class="footer-navigation__links">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
