feat: add tags, edit base, contact-us, strategies, columns and style

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         </div>
                         <textarea name="question" placeholder="What do you want to ask?" class="contact-us__line"></textarea>
                         <div class="contact-us__button">
-                            <button type="submit" class="button button_colored">Send</button>
+                            <button type="submit" class="button button--colored">Send</button>
                         </div>
                     </form>
                 </div>
